<resources>
    <string name="app_name">Mi Libreria</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--  AnadirLibroFragment  -->
    <string name="titulo">Título:</string>
    <string name="titulo_hint">Escribe el título aquí</string>
    <string name="autor">Autor/a:</string>
    <string name="autora">Autor o autora</string>
    <string name="autor_hint">Escribe el autor / la autora aquí</string>
    <string name="isbn">ISBN:</string>
    <string name="isbn_hint">Escribe el ISBN aquí</string>
    <string name="anio">Año de publicación:</string>
    <string name="anio_hint">Escribe el año de publicación aquí</string>
    <string name="fecha">Seleccionar fecha</string>
    <string name="valoracion">Valoración:</string>
    <string name="valoracion_hint">Teclea la valoración aquí</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="volver">Volver</string>
    <string name="editar">Editar</string>

    <!--  LoginFragment  -->
    <string name="imagen_logo">Imagen del logo</string>
    <string name="usuario">Usuario:</string>
    <string name="usuario_hint">Escribe el usuario aquí</string>
    <string name="contrasena">Contraseña:</string>
    <string name="contrasena_hint">Escribe la contraseña aquí</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrar_ahora">Registrarse y entrar</string>

    <!--  AnadirUsuarioFragment  -->
    <string name="nombre_usuario">Nombre de Usuario</string>
    <!-- TODO : Poner los demás -->

    <!--  MenuLibroFragment  -->
    <string name="anadir_libro">Añadir Libro</string>
    <string name="ver_libros">Ver Libros</string>
    <string name="anadir_usuario">Añadir Usuario</string>
    <string name="ver_usuarios">Ver Usuarios</string>
    <string name="anadir_prestamo">Nuevo Préstamo</string>
    <string name="ver_prestamos">Ver Préstamos</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <!-- Labels para los Fragmentos (Navigation) -->
    <string name="titulo_login">Iniciar Sesión</string>
    <string name="titulo_menu_principal">Menú Principal</string>
    <string name="titulo_lista_libros">Lista de Libros</string>
    <string name="titulo_gestionar_libro">Gestionar Libro</string>
    <string name="titulo_ver_libro">Ver Libro</string>
    <string name="titulo_lista_usuarios">Lista de Usuarios</string>
    <string name="titulo_gestionar_usuario">Gestionar Usuario</string>
    <string name="titulo_ver_usuario">Ver Usuario</string>
    <string name="titulo_lista_prestamos">Lista de Préstamos</string>
    <string name="titulo_gestionar_prestamo">Gestionar Préstamo</string>
    <string name="titulo_ver_prestamo">Ver Préstamo</string>

    <string name="borrar_libro">Borrar libro</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>