<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AnadirLibroFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <TextView
            android:id="@+id/tvLabelTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etDetalleTitulo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_input_border"
            android:hint="@string/titulo_hint"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:paddingHorizontal="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelTitulo" />

        <TextView
            android:id="@+id/tvLabelAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/autora"
            android:text="@string/autor"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDetalleTitulo" />

        <EditText
            android:id="@+id/etDetalleAutor"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints="name"
            android:background="@drawable/bg_input_border"
            android:hint="@string/autor_hint"
            android:inputType="textPersonName"
            android:paddingHorizontal="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelAutor" />

        <TextView
            android:id="@+id/tvLabelIsbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/isbn"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDetalleAutor" />

        <EditText
            android:id="@+id/etDetalleIsbn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_input_border"
            android:hint="@string/isbn_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelIsbn" />

        <TextView
            android:id="@+id/tvLabelDetallePublicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/anio"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDetalleIsbn" />

        <EditText
            android:id="@+id/etDetallePublicacion"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_input_border"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/ejemplo_anio"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingHorizontal="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelDetallePublicacion" />

        <TextView
            android:id="@+id/tvLabelValoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/valoracion"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDetallePublicacion" />

        <EditText
            android:id="@+id/etDetalleValoracion"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_input_border"
            android:hint="@string/valoracion_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingHorizontal="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelValoracion" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cancelar"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:backgroundTint="#94D1BE"
            app:cornerRadius="28dp"
            app:layout_constraintEnd_toStartOf="@id/btnGuardar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDetalleValoracion" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGuardar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/guardar"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:backgroundTint="#008566"
            app:cornerRadius="28dp"
            app:layout_constraintBottom_toBottomOf="@id/btnCancelar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancelar"
            app:layout_constraintTop_toTopOf="@id/btnCancelar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>